--- a/FrontEnd/perMovDb/index.html
+++ b/FrontEnd/perMovDb/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/preline@2.0.3/dist/preline.min.css"
+    />
     <title>PerMovDb</title>
   </head>
   <body>
     <div id="root" class="bg-amber-100"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Preline UI JS -->
+    <script src="https://cdn.jsdelivr.net/npm/preline@2.0.3/dist/preline.min.js"></script>
   </body>
 </html>
